新增轉址 index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0; url=Prismark%20Studio.html" />
-    <title>轉址中...</title>
+    <title>正在導向 Prismark Studio...</title>
   </head>
   <body>
-    如果沒有自動跳轉，請點這裡：<a href="Prismark%20Studio.html">前往網站</a>
+    <p>如果沒有自動跳轉，請點這裡：<a href="Prismark%20Studio.html">前往主頁</a></p>
   </body>
 </html>
