--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=Prismark%20Studio.html" />
-    <title>正在導向 Prismark Studio...</title>
-  </head>
-  <body>
-    <p>如果沒有自動跳轉，請點這裡：<a href="Prismark%20Studio.html">前往主頁</a></p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>前往 Prismark Studio</title>
+  <meta http-equiv="refresh" content="2; url=Prismark%20Studio.html" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #0f172a;
+      color: #fff;
+      font-family: "Segoe UI", sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .container {
+      text-align: center;
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    .logo {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #38bdf8;
+      margin-bottom: 1rem;
+    }
+
+    .loading-dots span {
+      animation: blink 1.4s infinite;
+      font-size: 1.2rem;
+    }
+
+    .loading-dots span:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+    .loading-dots span:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes blink {
+      0%, 80%, 100% {
+        opacity: 0;
+      }
+      40% {
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="logo">棱銘工作室 Prismark Studio</div>
+    <div>正在載入<span class="loading-dots"><span>.</span><span>.</span><span>.</span></span></div>
+  </div>
+</body>
 </html>
