--- a/Prismark Studio.html
+++ b/Prismark Studio.html
@@ -13,12 +13,13 @@
      crossorigin="anonymous"></script>
     
   </head>
-  
+
   <body>
 
       <!-- 網站頂部導航欄 -->
        <div class="content">外部連結!</div>
-      <div class="desktop-menu"><a href="https://www.instagram.com/prismarkstudio/" target="_blank">Instagram</a>、
+      <div class="desktop-menu">
+        <a href="https://www.instagram.com/prismarkstudio/" target="_blank">Instagram</a>、
         <a href="https://www.youtube.com/channel/UCx8y_WbYTmTtqZJQh07AH0w" target="_blank">YouTube</a>、
         <a href="https://www.tiktok.com/@prismarkstudio1?is_from_webapp=1&sender_device=pc" target="_blank">tiktok</a>
         <a href="https://forms.gle/A3WkwaiX5N5t3ZTt6" target="_blank">遊戲市場調查問卷</a>
