--- a/Prismark Studio.html
+++ b/Prismark Studio.html
@@ -20,17 +20,13 @@
   <div class="content">🔗 外部連結</div>
 
   <!-- 桌機版連結列 -->
-  <div class="desktop-menu">
+  <div class="footer-links">
     <a href="https://www.instagram.com/prismarkstudio/" target="_blank">Instagram</a>、
     <a href="https://www.youtube.com/channel/UCx8y_WbYTmTtqZJQh07AH0w" target="_blank">YouTube</a>、
     <a href="https://www.tiktok.com/@prismarkstudio1" target="_blank">TikTok</a>
     <a href="https://forms.gle/A3WkwaiX5N5t3ZTt6" target="_blank">遊戲市場調查問卷</a>
   </div>
 
-  <!-- 手機版選單圖示 -->
-  <div class="mobile-menu">
-    <img src="菜單圖示.PNG.png" width="30" height="30" alt="選單圖示" />
-  </div>
 
   <!-- 主標題與副標題 -->
   <div class="title">棱銘工作室 Prismyth Studio</div>
@@ -84,5 +80,6 @@
     <div class="link-item"><a href="關於我們.html" target="_blank">關於我們</a></div>
     <div class="link-item"><a href="贊助名單及金額.html" target="_blank">贊助名單</a></div>
   </div>
+  
 </body>
 </html>
