--- a/Prismark Studio.html
+++ b/Prismark Studio.html
@@ -6,7 +6,7 @@
   <!-- 設定響應式視窗大小，讓網站在手機上也能良好顯示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 頁面標題，顯示於瀏覽器分頁標籤 -->
-  <title>棱銘工作室 Prismyth Studio</title>
+  <title>棱銘工作室 Prismark Studio</title>
 
   <!-- 引入 Google Fonts 的 Noto Sans TC 字體（正體中文友善字型） -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
 
 
   <!-- 主標題與副標題 -->
-  <div class="title">棱銘工作室 Prismyth Studio</div>
+  <div class="title">棱銘工作室 Prismark Studio</div>
   <div class="subtitle">創造深刻體驗的模擬遊戲開發者</div>
 
   <!-- 品牌簡介內容 -->
@@ -63,13 +63,13 @@
     如果你對我們的作品感興趣，或是想要合作開發，歡迎聯絡我們！<br><br>
     有任何合作提案、玩家建議或媒體詢問，歡迎透過以下方式與我們聯繫：<br><br>
     📧 Email：<a href="mailto:prismarkstudio@gmail.com">prismarkstudio@gmail.com</a><br>
-    📱 IG／TikTok／YouTube：搜尋「棱銘工作室 Prismyth Studio」
+    📱 IG／TikTok／YouTube：搜尋「棱銘工作室 Prismark Studio」
   </div>
 
   <!-- 頁尾版權資訊 -->
   <footer>
     <div class="footer-text">
-      © 2025 棱銘工作室 Prismyth Studio ｜ <a href="privacy.html" target="_blank">隱私權政策</a>
+      © 2025 棱銘工作室 Prismark Studio ｜ <a href="privacy.html" target="_blank">隱私權政策</a>
     </div>
   </footer>
 
