--- a/關於我們.html
+++ b/關於我們.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>棱銘工作室 Prismyth Studio｜關於我們</title>
+  <title>棱銘工作室 Prismark Studio｜關於我們</title>
 
   <style>
     * {
@@ -75,19 +75,17 @@
 </head>
 <body>
   <header>
-    <h1>棱銘工作室 Prismyth Studio</h1>
+    <h1>棱銘工作室 Prismark Studio</h1>
   </header>
 
   <section id="about">
     <h2>關於我們</h2>
-    <p><strong>棱銘工作室 Prismyth Studio</strong> 是一個由年輕創作者創立的獨立數位創作品牌，專注於開發兼具文化深度與趣味的模擬遊戲與網站體驗。我們相信，創意不需要等到「準備好」才開始，只要有熱情與執行力，每一個想法都能化為現實。</p>
+    <p><strong>棱銘工作室 Prismark Studio</strong> 是一個由年輕創作者創立的獨立數位創作品牌，專注於開發兼具文化深度與趣味的模擬遊戲與網站體驗。我們相信，創意不需要等到「準備好」才開始，只要有熱情與執行力，每一個想法都能化為現實。</p>
 
     <p>從一個對廟會、遊戲、網頁懷抱熱情的學生開始，我們逐步踏上創作之路。目前，我們正開發一款以餐廳經營為主題的模擬遊戲，未來也計劃將台灣的傳統文化──例如「媽祖繞境」──融入遊戲世界，打造屬於在地、屬於夢想的數位作品。</p>
 
     <p>同時，我們也分享學習網頁設計的歷程，記錄每一行程式、每一次嘗試。希望這裡不只是一個展示作品的地方，更是一段段創作旅程的起點。</p>
 
-    <h3>工作室精神 Prism + Myth = Prismyth</h3>
-    <p>我們取名 <strong>Prismyth</strong>，象徵用「棱鏡（Prism）」折射出的光，照亮每個來自「神話（Myth）」與文化的靈感。每一個故事、每一份記憶，都值得被好好記錄與重現。</p>
 
     <p>我們還在起步階段，但夢想從不設限。<br>
     邀請你一起見證、參與，我們創造的每一步。</p>
