--- a/隱私權.html
+++ b/隱私權.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>棱銘工作室 Prismyth Studio｜隱私權政策</title>
+  <title>棱銘工作室 Prismark Studio｜隱私權政策</title>
   <style>
     body {
       font-family: 'Noto Sans TC', sans-serif;
@@ -33,7 +33,7 @@
 <body>
   <h1>隱私權政策</h1>
 
-  <p>棱銘工作室（Prismyth Studio）非常重視您的個人隱私與資訊安全。本網站目前僅作為遊戲作品展示與開發紀錄分享平台，不會主動收集任何可識別個人身份的資料。</p>
+  <p>棱銘工作室（Prismark Studio）非常重視您的個人隱私與資訊安全。本網站目前僅作為遊戲作品展示與開發紀錄分享平台，不會主動收集任何可識別個人身份的資料。</p>
 
   <p>未來若本網站加入聯絡表單、玩家意見回饋或數據分析工具，我們將僅於合理用途下蒐集資料，並僅供內部參考，不會提供予第三方，除非事先取得您的同意或依法配合。</p>
 
@@ -42,7 +42,7 @@
   <p>您如對本政策有任何疑問或建議，歡迎透過聯絡頁面與我們聯繫。</p>
 
   <footer>
-    © 2025 棱銘工作室 Prismyth Studio. 保留所有權利。
+    © 2025 棱銘工作室 Prismark Studio. 保留所有權利。
   </footer>
 </body>
 </html>
