--- a/index.html
+++ b/index.html
@@ -1,73 +1,85 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <title>前往 Prismark Studio</title>
-  <meta http-equiv="refresh" content="2; url=Prismark%20Studio.html" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #0f172a;
-      color: #fff;
-      font-family: "Segoe UI", sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
+  <!-- 設定頁面使用的字符編碼為 UTF-8 -->
+  <meta charset="UTF-8">
+  <!-- 設定響應式視窗大小，讓網站在手機上也能良好顯示 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 頁面標題，顯示於瀏覽器分頁標籤 -->
+  <title>棱銘工作室 Prismark Studio</title>
 
-    .container {
-      text-align: center;
-      animation: fadeIn 1.2s ease-in-out;
-    }
+  <!-- 引入 Google Fonts 的 Noto Sans TC 字體（正體中文友善字型） -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
 
-    .logo {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #38bdf8;
-      margin-bottom: 1rem;
-    }
 
-    .loading-dots span {
-      animation: blink 1.4s infinite;
-      font-size: 1.2rem;
-    }
-
-    .loading-dots span:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-    .loading-dots span:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-
-    @keyframes blink {
-      0%, 80%, 100% {
-        opacity: 0;
-      }
-      40% {
-        opacity: 1;
-      }
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.9);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
-  </style>
+<link rel="stylesheet" href="prismarkstudio.css">
 
 </head>
 <body>
-  <div class="container">
-    <div class="logo">棱銘工作室 Prismark Studio</div>
-    <div>正在載入<span class="loading-dots"><span>.</span><span>.</span><span>.</span></span></div>
+  <!-- 頁面頂部的提示文字 -->
+  <div class="content">🔗 外部連結</div>
+
+  <!-- 桌機版連結列 -->
+  <div class="footer-links">
+    <a href="https://www.instagram.com/prismarkstudio/" target="_blank">Instagram</a>、
+    <a href="https://www.youtube.com/channel/UCx8y_WbYTmTtqZJQh07AH0w" target="_blank">YouTube</a>、
+    <a href="https://www.tiktok.com/@prismarkstudio1" target="_blank">TikTok</a>
+    <a href="https://forms.gle/A3WkwaiX5N5t3ZTt6" target="_blank">遊戲市場調查問卷</a>
   </div>
+
+
+  <!-- 主標題與副標題 -->
+  <div class="title">棱銘工作室 Prismark Studio</div>
+  <div class="subtitle">創造深刻體驗的模擬遊戲開發者</div>
+
+  <!-- 品牌簡介內容 -->
+  <div class="content">
+    棱銘工作室是一個致力於模擬與文化體驗遊戲創作的獨立開發者品牌，
+    專注於結合現代科技與生活觀察，打造具深度與溫度的遊戲作品。<br>
+    從個人開發起步，我們相信每一個故事、每一次互動，都能成為觸動人心的可能。
+  </div>
+
+  <!-- 關於我們段落標題與描述 -->
+  <div class="section-title">關於我們</div>
+  <div class="content">
+    棱銘工作室（Prismyth Studio）由一位來自台灣的青少年獨立創作者成立，
+    專注於模擬經營與文化體驗類型的遊戲設計與製作。<br>
+    「棱」代表多面向的創意與技術，「銘」象徵記憶與情感的深刻印記；
+    我們的使命是用遊戲說故事，將文化、經營與玩家的想像連結起來。<br>
+    目前由一人獨立開發，未來將逐步擴展為小型團隊，持續開發更有趣、有意義的互動作品。
+  </div>
+
+  <!-- 作品展示區塊 -->
+  <div class="section-title">作品展示</div>
+  <div class="content">
+    🔸 一款從零開始打造夢想餐館的模擬遊戲，融合管理策略與人情故事。<br>
+    🔸 媽祖繞境模擬（概念階段）：重現台灣民間信仰文化，扮演主轎、香燈腳，見證一場跨越信仰與距離的旅程。<br><br>
+    🔜 更多模擬作品即將登場，敬請期待！
+  </div>
+
+  <!-- 聯絡資訊區塊 -->
+  <div class="section-title">聯絡我們</div>
+  <div class="content">
+    如果你對我們的作品感興趣，或是想要合作開發，歡迎聯絡我們！<br><br>
+    有任何合作提案、玩家建議或媒體詢問，歡迎透過以下方式與我們聯繫：<br><br>
+    📧 Email：<a href="mailto:prismarkstudio@gmail.com">prismarkstudio@gmail.com</a><br>
+    📱 IG／TikTok／YouTube：搜尋「棱銘工作室 Prismark Studio」
+  </div>
+
+  <!-- 頁尾版權資訊 -->
+  <footer>
+    <div class="footer-text">
+      © 2025 棱銘工作室 Prismark Studio ｜ <a href="privacy.html" target="_blank">隱私權政策</a>
+    </div>
+  </footer>
+
+  <!-- 底部導覽列按鈕連結 -->
+  <div class="footer-links">
+    <div class="link-item"><a href="工作人員名單.html" target="_blank">工作人員</a></div>
+    <div class="link-item"><a href="隱私權.html" target="_blank">隱私權政策</a></div>
+    <div class="link-item"><a href="關於我們.html" target="_blank">關於我們</a></div>
+    <div class="link-item"><a href="贊助名單及金額.html" target="_blank">贊助名單</a></div>
+  </div>
+  
 </body>
 </html>
