--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
 
 <link rel="stylesheet" href="prismarkstudio.css">
+<!--搜尋優化-->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO 標籤 -->
+  <title>棱銘工作室 Prismark Studio</title>
+  <meta name="description" content="棱銘工作室 Prismark Studio 是一個專注於遊戲開發與網頁創作的獨立創作者品牌。" />
+  <meta name="keywords" content="棱銘工作室, Prismark Studio, 遊戲開發, 獨立創作者, 網頁設計, 台灣創作者" />
+  <meta name="author" content="棱銘工作室 Prismark Studio" />
+
+  <!-- 讓社群分享顯示縮圖與預覽 -->
+  <meta property="og:title" content="棱銘工作室 Prismark Studio" />
+  <meta property="og:description" content="一個致力於遊戲與網站創作的工作室。" />
+  <meta property="og:image" content="https://prismarkstudio.site//棱镜工作室Prism Studio.png" />
+  <meta property="og:url" content="https://prismarkstudio.site" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
 
 </head>
 <body>
