--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <!-- 引入 Google Fonts 的 Noto Sans TC 字體（正體中文友善字型） -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://prismarkstudio.site/" />
+
 
 
 <link rel="stylesheet" href="prismarkstudio.css">
