--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -55,6 +55,8 @@
       text-decoration: underline;
     }
   </style>
+  <link rel="canonical" href="https://prismarkstudio.site/" />
+
 </head>
 <body>
   <div class="container">
