--- a/贊助名單及金額.html
+++ b/贊助名單及金額.html
@@ -16,6 +16,8 @@
     <span class="donor-info"><a href="https://www.instagram.com/ccgdk.__.c?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" targrt="_blank">孫康康</a> - NT$4000</span>
   </div>
 </div>
+<link rel="canonical" href="https://prismarkstudio.site/" />
+
 </head>
 <body>
     
