--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>棱銘工作室｜招募與團隊資訊</title>
+  <title>銘岸｜Zynvrae｜招募與團隊資訊</title>
   <style>
     body {
       background-color: #f9fafb;
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>棱銘工作室 Prismark Studio｜團隊名單與招募</h1>
+    <h1>銘岸｜Zynvrae｜團隊名單與招募</h1>
 
     <div class="section">
       <div class="role-item">
