--- a/贊助名單及金額.html
+++ b/贊助名單及金額.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="贊助名單.css">
 
     <meta charset="UTF-8" />
-    <title>棱銘工作室 Prismark Studio｜贊助名單</title>
+    <title>銘岸｜Zynvrae｜贊助名單</title>
 
 </head>   
     <!-- 贊助名單 區塊標題 -->
