--- a/關於我們.html
+++ b/關於我們.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>棱銘工作室 Prismark Studio｜關於我們</title>
-
+  <title>銘岸｜Zynvrae ｜關於我們</title>
   <style>
     * {
       box-sizing: border-box;
@@ -29,7 +28,7 @@
       font-size: 2rem;
     }
 
-    section#about {
+    main {
       max-width: 860px;
       margin: 2rem auto;
       padding: 2rem;
@@ -38,7 +37,7 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
-    section#about h2 {
+    main h2 {
       font-size: 1.75rem;
       color: #2563eb;
       margin-bottom: 1rem;
@@ -46,23 +45,39 @@
       padding-bottom: 0.5rem;
     }
 
-    section#about h3 {
+    main h3 {
       font-size: 1.3rem;
       color: #374151;
       margin-top: 2rem;
     }
 
-    section#about p {
+    main p {
       line-height: 1.8;
       margin: 1rem 0;
+    }
+
+    main ul {
+      padding-left: 1.25rem;
+    }
+
+    main ul li {
+      margin-bottom: 0.75rem;
+      line-height: 1.6;
     }
 
     strong {
       color: #2563eb;
     }
 
+    footer {
+      text-align: center;
+      padding: 1rem;
+      color: #888;
+      font-size: 0.9rem;
+    }
+
     @media (max-width: 600px) {
-      section#about {
+      main {
         padding: 1.5rem;
         margin: 1rem;
       }
@@ -72,25 +87,45 @@
       }
     }
   </style>
-  <link rel="canonical" href="https://prismarkstudio.site/" />
-
 </head>
 <body>
   <header>
-    <h1>棱銘工作室 Prismark Studio</h1>
+    <h1>銘岸｜Zynvrae</h1>
   </header>
 
-  <section id="about">
-    <h2>關於我們</h2>
-    <p><strong>棱銘工作室 Prismark Studio</strong> 是一個由年輕創作者創立的獨立數位創作品牌，專注於開發兼具文化深度與趣味的模擬遊戲與網站體驗。我們相信，創意不需要等到「準備好」才開始，只要有熱情與執行力，每一個想法都能化為現實。</p>
+  <main>
+    <h2>關於銘岸｜Zynvrae</h2>
+    <p>在創新與文化交會的岸邊，我們選擇留下屬於自己的刻痕。</p>
 
-    <p>從一個對廟會、遊戲、網頁懷抱熱情的學生開始，我們逐步踏上創作之路。目前，我們正開發一款以餐廳經營為主題的模擬遊戲，未來也計劃將台灣的傳統文化──例如「媽祖繞境」──融入遊戲世界，打造屬於在地、屬於夢想的數位作品。</p>
+    <p><strong>銘岸｜Zynvrae</strong> 是一個獨立創作品牌，由洪孝銘創立，專注於打造具有文化底蘊與現代感的數位體驗。無論是模擬類遊戲、互動網頁，還是概念設計與敘事企劃，我們始終以「誠實創作、獨立思考」為核心，將真實想法轉化為有溫度的作品。</p>
 
-    <p>同時，我們也分享學習網頁設計的歷程，記錄每一行程式、每一次嘗試。希望這裡不只是一個展示作品的地方，更是一段段創作旅程的起點。</p>
+    <h3>品牌名稱的意涵</h3>
+    <p><strong>銘岸</strong>：象徵記憶與連結之地。我們希望成為創作者與使用者心中的一座岸，承載創意，也傳遞情感。</p>
+    <p><strong>Zynvrae</strong>：一個無既定意義的獨創詞彙，代表我們對未知、自由與獨特性的嚮往。它不被定義，正如我們的作品，永遠保持開放與可能。</p>
 
+    <h3>我們相信</h3>
+    <p>🎮 每一款遊戲都是一次世界的構築</p>
+    <p>🛠️ 每一個網頁都是一段觀點的展現</p>
+    <p>📣 每一則敘事，都是一次與觀眾的深度對話</p>
 
-    <p>我們還在起步階段，但夢想從不設限。<br>
-    邀請你一起見證、參與，我們創造的每一步。</p>
-  </section>
+    <h3>我們在做的事</h3>
+    <ul>
+      <li><strong>遊戲開發：</strong>以模擬與文化為主軸，打造能引發共鳴的互動體驗</li>
+      <li><strong>網頁創作：</strong>從品牌網站到互動頁面，強調設計與敘事兼具</li>
+      <li><strong>品牌經營：</strong>逐步建立一個具有個性、理念與藝術感的創作宇宙</li>
+    </ul>
+
+    <h3>我們的願景</h3>
+    <p>我們相信，真正有價值的創作，來自於對世界的觀察、對文化的尊重，以及對創新的執著。我們希望透過每一個作品，讓觀眾不只被吸引，更能有所感、有所想。</p>
+
+    <p style="text-align: center; font-weight: 500; margin-top: 2rem;">
+      這裡是一段旅程的起點，<br />
+      而我們邀請你，一起走下去。
+    </p>
+  </main>
+
+  <footer>
+    © 2025 銘岸｜Zynvrae — All rights reserved.
+  </footer>
 </body>
 </html>
