--- a/index.html
+++ b/index.html
@@ -20,11 +20,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO 標籤 -->
-  <title>棱銘工作室 Prismark Studio</title>
-  <meta name="description" content="棱銘工作室 Prismark Studio 是一個專注於遊戲開發與網頁創作的獨立創作者品牌。" />
-  <meta name="keywords" content="棱銘工作室, Prismark Studio, 遊戲開發, 獨立創作者, 網頁設計, 台灣創作者" />
-  <meta name="author" content="棱銘工作室 Prismark Studio" />
+<!-- 基本 SEO -->
+<title>銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
+<meta name="description" content="銘岸｜Zynvrae 是由台灣創作者洪孝銘創立的獨立品牌，專注於模擬遊戲開發、互動網頁與數位敘事，融合文化底蘊與創新精神。" />
+<meta name="keywords" content="Zynvrae, 銘岸, 獨立遊戲, 模擬遊戲, 遊戲開發, 網頁設計, 台灣創作品牌, 數位藝術, 文化敘事" />
+<meta name="author" content="銘岸｜Zynvrae" />
+
+<!-- 裝置支援 -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="theme-color" content="#1f2937" />
+
+<!-- Canonical 網址 -->
+<link rel="canonical" href="https://yourdomain.com/" />
+
+<!-- Open Graph for Facebook -->
+<meta property="og:title" content="銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
+<meta property="og:description" content="專注於模擬遊戲與文化網頁創作的數位品牌，融合創新與情感，打造有深度的互動體驗。" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://yourdomain.com/" />
+<meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+<meta property="og:site_name" content="銘岸｜Zynvrae" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
+<meta name="twitter:description" content="由Ming H.創立的品牌，致力於模擬遊戲、文化敘事與互動設計，連結真實與創意。" />
+<meta name="twitter:image" content="https://yourdomain.com/og-image.jpg" />
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
 
   <!-- 彈出視窗容器 -->
 <div id="renameModal" style="
