--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <!-- 品牌簡介內容 -->
   <div class="content">
-    棱銘工作室是一個致力於模擬與文化體驗遊戲創作的獨立開發者品牌，
+    銘岸工作室是一個致力於模擬與文化體驗遊戲創作的獨立開發者品牌，
     專注於結合現代科技與生活觀察，打造具深度與溫度的遊戲作品。<br>
     從個人開發起步，我們相信每一個故事、每一次互動，都能成為觸動人心的可能。
   </div>
