新增網站圖片 銘岸.png

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
+  <!--網站縮圖-->
+  <img src="銘岸.png" alt="描述文字">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet" />
