--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
-  <!--網站縮圖-->
-  <img src="銘岸.png" alt="描述文字">
+<!-- 預覽縮圖設定（統一網址） -->
+<meta property="og:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
+<meta name="twitter:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
+
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet" />
