--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
+  <title>棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
 <!-- 預覽縮圖設定（統一網址） -->
 <meta property="og:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
 <meta name="twitter:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
@@ -83,7 +83,7 @@
         感謝您的關注！我們原為 <strong><br>棱銘工作室 Prismark Studio</strong>
         <br>
         現在正式更名為：<br>
-        <strong style="color: #2563eb;">銘岸｜Zynvrae</strong>
+        <strong style="color: #2563eb;">棱銘｜Zynvrae</strong>
       </p>
       <p style="font-size: 0.9rem; color: #555;">
         我們將持續以誠實創作與文化結合的精神，打造更有深度的數位體驗！
@@ -110,11 +110,11 @@
     <a href="https://forms.gle/A3WkwaiX5N5t3ZTt6" target="_blank">遊戲市場調查問卷</a>
   </div>
 
-  <div class="title">銘岸｜Zynvrae</div>
+  <div class="title">棱銘｜Zynvrae</div>
   <div class="subtitle">創造深刻體驗的模擬遊戲開發者</div>
 
   <div class="content">
-    銘岸工作室是一個致力於模擬與文化體驗遊戲創作的獨立開發者品牌，專注於結合現代科技與生活觀察，打造具深度與溫度的遊戲作品。<br>
+    棱銘｜Zynvrae工作室是一個致力於模擬與文化體驗遊戲創作的獨立開發者品牌，專注於結合現代科技與生活觀察，打造具深度與溫度的遊戲作品。<br>
     從個人開發起步，我們相信每一個故事、每一次互動，都能成為觸動人心的可能。
   </div>
 
@@ -122,7 +122,7 @@
   <div class="content">
     銘岸｜Zynvrae 是一個致力於創新與文化融合的個人創作品牌。<br>
     於2025/5/16創立，專注於開發兼具敘事性與沉浸感的數位體驗。<br>
-    「銘岸」象徵記憶與連結的岸邊，「Zynvrae」代表我們對風格與自由創作的堅持。
+    「Zynvrae」代表我們對風格與自由創作的堅持。
   </div>
 
   <div class="section-title">作品展示</div>
@@ -136,12 +136,12 @@
   <div class="content">
     有任何合作提案、玩家建議或媒體詢問，歡迎聯絡我們：<br><br>
     📧 Email：<a href="mailto:zynvrae@gmail.com">zynvrae@gmail.com</a><br>
-    📱 IG／TikTok／YouTube：搜尋「銘岸｜Zynvrae」
+    📱 IG／TikTok／YouTube：搜尋「棱銘｜Zynvrae」
   </div>
 
   <footer>
     <div class="footer-text">
-      © 2025 銘岸｜Zynvrae ｜ <a href="隱私權.html" target="_blank">隱私權政策</a>
+      © 2025 棱銘｜Zynvrae ｜ <a href="隱私權.html" target="_blank">隱私權政策</a>
     </div>
   </footer>
 
