--- a/關於我們.html
+++ b/關於我們.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>銘岸｜Zynvrae ｜關於我們</title>
+  <title>棱銘｜Zynvrae ｜關於我們</title>
   <style>
     * {
       box-sizing: border-box;
@@ -90,18 +90,15 @@
 </head>
 <body>
   <header>
-    <h1>銘岸｜Zynvrae</h1>
+    <h1>棱銘｜Zynvrae</h1>
   </header>
 
   <main>
-    <h2>關於銘岸｜Zynvrae</h2>
+    <h2>關於棱銘｜Zynvrae</h2>
     <p>在創新與文化交會的岸邊，我們選擇留下屬於自己的刻痕。</p>
 
-    <p><strong>銘岸｜Zynvrae</strong> 是一個獨立創作品牌，由洪孝銘創立，專注於打造具有文化底蘊與現代感的數位體驗。無論是模擬類遊戲、互動網頁，還是概念設計與敘事企劃，我們始終以「誠實創作、獨立思考」為核心，將真實想法轉化為有溫度的作品。</p>
+    <p><strong>棱銘｜Zynvrae</strong> 是一個獨立創作品牌，由洪孝銘創立，專注於打造具有文化底蘊與現代感的數位體驗。無論是模擬類遊戲、還是概念設計與敘事企劃，我們始終以「誠實創作、獨立思考」為核心，將真實想法轉化為有溫度的作品。</p>
 
-    <h3>品牌名稱的意涵</h3>
-    <p><strong>銘岸</strong>：象徵記憶與連結之地。我們希望成為創作者與使用者心中的一座岸，承載創意，也傳遞情感。</p>
-    <p><strong>Zynvrae</strong>：一個無既定意義的獨創詞彙，代表我們對未知、自由與獨特性的嚮往。它不被定義，正如我們的作品，永遠保持開放與可能。</p>
 
     <h3>我們相信</h3>
     <p>🎮 每一款遊戲都是一次世界的構築</p>
@@ -125,7 +122,7 @@
   </main>
 
   <footer>
-    © 2025 銘岸｜Zynvrae — All rights reserved.
+    © 2025 棱銘｜Zynvrae — All rights reserved.
   </footer>
 </body>
 </html>
