--- a/index.html
+++ b/index.html
@@ -4,40 +4,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌</title>
-<!-- 預覽縮圖設定（統一網址） -->
-<meta property="og:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
-<meta name="twitter:image" content="https://hong-design.github.io/Prismark-studio/銘岸.png" />
+<!-- 預覽縮圖設定（統一圖片網址） -->
+<meta property="og:image" content="https://prismarkstudio.site/og-image.jpg" />
+<meta name="twitter:image" content="https://prismarkstudio.site/og-image.jpg" />
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet" />
 
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet" />
+<!-- Canonical URL -->
+<link rel="canonical" href="https://prismarkstudio.site/" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<!-- SEO Meta -->
+<meta name="description" content="棱銘｜Zynvrae 是由台灣創作者洪孝銘創立的獨立品牌，專注於模擬遊戲開發、互動網頁與數位敘事，融合文化底蘊與創新精神。" />
+<meta name="keywords" content="Zynvrae, 棱銘, 獨立遊戲, 模擬遊戲, 遊戲開發, 網頁設計, 台灣創作品牌, 數位藝術, 文化敘事" />
+<meta name="author" content="棱銘｜Zynvrae" />
+<meta name="theme-color" content="#1f2937" />
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://prismarkstudio.site/" />
+<!-- Open Graph (Facebook) -->
+<meta property="og:title" content="棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
+<meta property="og:description" content="專注於模擬遊戲與文化網頁創作的數位品牌，融合創新與情感，打造有深度的互動體驗。" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://prismarkstudio.site/" />
+<meta property="og:image" content="https://prismarkstudio.site/og-image.jpg" />
+<meta property="og:site_name" content="棱銘｜Zynvrae" />
 
-  <!-- SEO Meta -->
-  <meta name="description" content="銘岸｜Zynvrae 是由台灣創作者洪孝銘創立的獨立品牌，專注於模擬遊戲開發、互動網頁與數位敘事，融合文化底蘊與創新精神。" />
-  <meta name="keywords" content="Zynvrae, 銘岸, 獨立遊戲, 模擬遊戲, 遊戲開發, 網頁設計, 台灣創作品牌, 數位藝術, 文化敘事" />
-  <meta name="author" content="銘岸｜Zynvrae" />
-  <meta name="theme-color" content="#1f2937" />
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="棱銘｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
+<meta name="twitter:description" content="由洪孝銘創立的品牌，致力於模擬遊戲、文化敘事與互動設計，連結真實與創意。" />
+<meta name="twitter:image" content="https://prismarkstudio.site/og-image.jpg" />
 
-  <!-- Open Graph (Facebook) -->
-  <meta property="og:title" content="銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
-  <meta property="og:description" content="專注於模擬遊戲與文化網頁創作的數位品牌，融合創新與情感，打造有深度的互動體驗。" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://prismarkstudio.site/" />
-  <meta property="og:image" content="https://prismarkstudio.site/og-image.jpg" />
-  <meta property="og:site_name" content="銘岸｜Zynvrae" />
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="銘岸｜Zynvrae — 遊戲開發與網頁創作的獨立品牌" />
-  <meta name="twitter:description" content="由洪孝銘創立的品牌，致力於模擬遊戲、文化敘事與互動設計，連結真實與創意。" />
-  <meta name="twitter:image" content="https://prismarkstudio.site/og-image.jpg" />
 
   <!-- 外部樣式表 -->
   <link rel="stylesheet" href="prismarkstudio.css" />
