--- a/工作人員名單.html
+++ b/工作人員名單.html
@@ -56,6 +56,8 @@
     }
   </style>
   <link rel="canonical" href="https://prismarkstudio.site/" />
+  <meta name="robots" content="noindex, nofollow" />
+
 
 </head>
 <body>
